--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
 .App-header {
   background-color: #282c34;
@@ -19,8 +14,29 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.eventsList {
+  float: left;
+  width: 48%;
+  /* display: grid; */
+  /* grid-template-columns: auto auto auto auto; */
+  margin-left: 25px;
+  overflow-y: auto;
+  max-height: 750px;
+  border: 1px solid black;
+  /* background-color: #d9d9d9; */
+}
+
+.eventFavs {
+  float: right;
+  width: 651px;
+  text-align: center;
+  border: 2px solid black;
+  margin-right: 15px;
+  margin-left: 25px;
+  background-color: #d9d9d9;
+  /* position: fixed;
+  left: 50%;
+  bottom: 1%; */
 }
 
 .sportsList {
